--- a/front/package.json
+++ b/front/package.json
@@ -9,7 +9,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.18.3",
+    "axios": "^0.25.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
