--- a/back/package.json
+++ b/back/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "env": "^0.0.2",
+    "env": "0.0.2",
     "express": "^4.17.2",
-    "helmet": "^5.0.2",
+    "helmet": "^5.0.1",
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.2",
     "nodemailer-smtp-pool": "^2.8.3"
