--- a/front/package.json
+++ b/front/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "ruby-talk",
+  "name": "front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
+    "@ant-design/icons": "^4.7.0",
+    "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4",
-    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.3",
     "axios": "^0.25.0",
+    "firebase": "^7.16.0",
+    "firebase-tools": "^8.20.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.2.1",
-    "styled-components": "^5.3.3"
+    "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
